--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ html {
   font-weight: 400;
   font-style: normal;
 }
+}<li><a href="CFU.html" style="font-size: 24px; color: #FF4500; font-weight: bold; text-decoration: none;">CFU</a></li>
+}
 
 #banner{
  ont-size: 5.5em;
