--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ html {
 }
 #heading{
   font-size: 5.5em;
-  color: #DE35E3;
-  font-family:fantasy;
+  color: #ffffff;
+  font-family: Send Flowers;
   font-weight:400;
   font-style:normal;
   text-align:center;
@@ -13,23 +13,86 @@ html {
   text-shadow: 1px 1px 2px #FF69B4, 0 0 25px #F33A6A, 0 0 5px #E0115F;
 }
 .Send Flowers-regular {
-  font-family: "fantasy", system-ui;
+  font-family: "Send Flowers", system-ui;
   font-weight: 400;
   font-style: normal;
+  color: #ffffff;
 }
-nav ul {
-list-style: none;
-padding: 0;
-} 
-nav ul li a {
-display: inline;
-  margin: 0 15px;
-} 
-nav ul 1i a ( 
-color: #fff;
-text-decoration: none;
+h2{
+  font-family: "Send Flowers", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  text-align:center;
+  font-size: 60px;
+  color: #FF69B4;
+  text-shadow:1px 1px 2px #ffffff;
 }
-  section{   
-padding: 20px;
-background-color: ffaffd;
-  }
+p{
+  font-family: "Hi Melody", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  text-align:center;
+  font-size: 30px;
+  text-shadow:1px 1px 2px #FF69B4
+}
+li{
+  display:inline;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#navi{
+  background-image: url("Coquette Pink Bow Pattern.jpg");
+  padding: 20px;
+  position: relative;
+  text-align:center;
+  font-size: 1.3em;
+  box-shadow: 1px 3px 30px 1px  #ffffff;
+}
+a{
+  padding: 20px;
+  position: relative;
+  text-align:center;
+  font-size: 30px;
+  word-spacing: 200px;
+   font-family: "Send Flowers", system-ui;
+  text-decoration: none;
+}
+body{
+  background-color: #FFB6C1;
+}
+a:hover{
+  color:#F33A6A;
+}
+
+a:link{
+  color:#FF69B4; 
+}
+a:visited{
+  color:#AA336A;
+}
+#subheading{
+  font-size: 5.5em;
+  letter-spacing: 0.3cm;
+  color:#000000;
+  font-family:Modak;
+  font-weight:400;
+  font-style:normal;
+  text-align:center;
+  padding:55px;
+}
+#labs{
+
+  font-size: 2em;
+  padding:20px;
+}
+.container{
+  box-shadow: 1px 3px 30px 1px #ffffff;
+  color: #000000;
+  height:2500px;
+ margin: 15px;
+  overflow:hidden;
+  text-align: center;
+}
