--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ ul {
   padding: 0;
 }
 #navi{
-  background-image: url("Coquette Pink Bow Pattern.jpg");
+  background-color: #4541E1;
   padding: 20px;
   position: relative;
   text-align:center;
