--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{
   background-color: #4541E1;
 }
 a:hover{
-  color:#F33A6A;
+  color:#564677;
 }
 
 a:link{
@@ -83,7 +83,7 @@ a:visited{
   text-align:center;
   padding:55px;
 }
-#labs{
+#CFU{
 
   font-size: 2em;
   padding:20px;
