--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ ul {
   padding: 0;
 }
 #navi{
-  background-color: #4541E1;
+  background-color: #EE9438;
   padding: 20px;
   position: relative;
   text-align:center;
