--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a:visited{
 
 img{
   border-color: white;
-  border-style: dashed;
+  border-style: dotted;
   border-width: 10px;
   border-radius: 10px;
   box-shadow: 1px 3px 30px 1px  #ffffff;
